# Crypto-MCP-Server---by-Corax-CoLAB

./: .env.example  COMPARISON.md  Dockerfile.mcp  IDEAS.md  LICENSE  README.md  ccxt_mcp.py  coingecko_mcp.py  docker-compose.yml  fix_arbitrage_imports.js  fix_dupes.js  fix_dupes2.js  fix_regex.js  fix_regex.py  fix_regex2.js  fix_server.js  freqtrade_mcp.py  hummingbot_mcp.py  install.sh  llm_mcp.py  news_mcp.py  notifier_mcp.py  octobot_mcp.py  onchain_mcp.py  patch_app.js  patch_app.py  patch_app.sh  patch_app_build.js  patch_arbitrage.js  patch_backend_bug.js  patch_backend_bug2.js  patch_backend_bug3.js  patch_backtest.js  patch_backtest.sh  patch_ccxt_mcp.py  patch_env.js  patch_glitch.js  patch_holo_book.js  patch_holo_flow.js  patch_holo_order_flow.sh  (+33 more)
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
gui/backend/: .env.example  orders.db  package-lock.json  package.json  server.js
gui/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
gui/frontend/src/: App.tsx  api_mcp.ts  (+4 more)
systemd/: ccxt_mcp.service  coingecko_mcp.service  freqtrade_mcp.service  notifier_mcp.service  onchain_mcp.service  portfolio_mcp.service  ta_mcp.service
tests/: test_ccxt_mcp.py  test_endpoints.sh  test_llm_mcp.py  test_news_mcp.py  test_onchain_mcp.py
wiki/: Claude-Desktop-Integration.md  Configuration.md  Dashboard-User-Manual.md  Extending-and-Integration.md  Home.md  Manual-Install.md  Quick-Start.md  REST-API-Examples.md  SQLite-and-Logs.md  Security-and-Best-Practices.md  Systemd-and-Services.md  Troubleshooting.md  _Sidebar.md
(+42 files in other folders)
